text align fixed

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ Style For Desktop & Laptop. Width > 1024px
     font-size: 16px;
     padding-bottom: 30px;
     color: #6C6C6C;
+    text-align: justify;
 }
 
 .text-part a {
